...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mezzo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/bianco"></TextView>

        <Spinner
            android:id="@+id/spnNave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portoPartenza"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <Spinner
            android:id="@+id/spnPortoPartenza"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portoArrivo"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <Spinner
            android:id="@+id/spnPortoArrivo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
...
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnConfermaOSmentisci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/minusminus"></Button>

        <Button
...
            android:layout_weight="2"
            android:text="@string/plusplus"></Button>

    </LinearLayout>

    <ListView
        android:id="@+id/listMezzi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"></ListView>
</LinearLayout>

