<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">

    <TextView
        android:id="@+id/txtMezzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tampone"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <TextView
        android:id="@+id/txtPartenza"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tampone"
        android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

    <TextView
        android:id="@+id/txtArrivo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tampone"
        android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

    <TextView
        android:id="@+id/txtCosto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tampone"
        android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

    <TextView
        android:id="@+id/txtAuto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tampone"
        android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

    <TextView
        android:id="@+id/txtPeriodo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tampone"
        android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

    <TextView
        android:id="@+id/txtGiorniSettimana"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fitsSystemWindows="true"
        android:text="@string/tampone"
        android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

    <Button
        android:id="@+id/btnBiglietterie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/numeriUtili"></Button>

    <Button
        android:id="@+id/btnTaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/numeriTaxi"></Button>

    <Button
        android:id="@+id/btnConfermaOSmentisci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/confermaOSmentisci" />

    <Button
        android:id="@+id/btnReturnToHome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/esci"></Button>
    
    
</LinearLayout>
