...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textConferma"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnConferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.17"
        android:text="@string/Conferma" />
    
</LinearLayout>

